removed a lot of wes and wrote a section on parameters

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -12,6 +12,7 @@
 \usepackage{hyperref}
 \usepackage{epstopdf}
 \usepackage{nomencl}
+\usepackage{tabularx}
 \makenomenclature
 
 \usepackage{pdfpages}
