--- a/latex/references.bib
+++ b/latex/references.bib
@@ -43,3 +43,19 @@
 	year = "2011"
 }
 
+@article{light1996protein,
+	author = "Light, Peter E and Sabir, Aftab A and Allen, Bruce G and Walsh, Michael P and French, Robert J",
+	title = "{Protein Kinase C--Induced Changes in the Stoichiometry of ATP Binding Activate Cardiac ATP-Sensitive K+ Channels A Possible Mechanistic Link to Ischemic Preconditioning}"
+}
+
+@article{arellano2007ultrastructure,
+	author = "Arellano, Jon I and Benavides-Piccione, Ruth and DeFelipe, Javier and Yuste, Rafael",
+	journal = "Frontiers in neuroscience",
+	number = "1",
+	pages = "131",
+	publisher = "Frontiers Research Foundation",
+	title = "{Ultrastructure of dendritic spines: correlation between synaptic and spine morphologies}",
+	volume = "1",
+	year = "2007"
+}
+
