wrote new introduction, some minor changes to spines makes them stop taking in new particles after a while

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -13,6 +13,7 @@
 \usepackage{epstopdf}
 \usepackage{nomencl}
 \usepackage{tabularx}
+\usepackage{subfiles}
 \makenomenclature
 
 \usepackage{pdfpages}
@@ -78,7 +79,8 @@
 % \listoftables
 
 \chapter{Introduction}
-\include{Intro}
+% \include{Intro}
+\subfile{project_description}
 
 \chapter{Basic Theory}
 \include{theory}
