--- a/latex/main.tex
+++ b/latex/main.tex
@@ -79,7 +79,7 @@
 % \listoftables
 
 \chapter{Introduction}
-% \include{Intro}
+\clearpage
 \subfile{project_description}
 
 \chapter{Basic Theory}
@@ -95,7 +95,8 @@
 
 
 \chapter{Results}
-\include{results}
+\clearpage
+\subfile{results}
 
 \appendix
 \chapter{}
